# aviasales-mcp

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  TASKS.md  TODO.md  pyproject.toml
.claude/: settings.json
src/aviasales_mcp/: __init__.py  config.py  server.py
src/aviasales_mcp/api/: client.py
src/aviasales_mcp/models/: flights.py  reference.py
src/aviasales_mcp/tools/: flights.py  reference.py
tests/: conftest.py  test_flights.py
