[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aviasales-mcp"
version = "0.1.0"
description = "MCP server for Aviasales/Travelpayouts Flight Search API"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
authors = [
    { name = "aviasales-mcp contributors" },
]
keywords = ["mcp", "aviasales", "travelpayouts", "flights", "travel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "fastmcp>=3.1,<4",
    "httpx>=0.28,<1",
    "pydantic>=2.12,<3",
    "pydantic-settings>=2.7,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=6.0,<7",
    "respx>=0.22,<1",
    "ruff>=0.9,<1",
]

[project.scripts]
aviasales-mcp = "aviasales_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aviasales_mcp"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["aviasales_mcp"]
